modernize getExperienceRewards